fixed nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ nav{
 	position:fixed;
 	background:white;
 	margin-top:-100px;
+	z-index:999;
 }
 
 nav p{
